add as3crypto to thanks section

--- a/bin/index.html
+++ b/bin/index.html
@@ -139,6 +139,7 @@ Thanks to David Cheetham for the taiko sounds,
 <a href="http://code.google.com/p/as3wavsound/">AS3WavSound</a>, 
 <a href="http://www.minimalcomps.com/">MinimalComps</a>, 
 <a href="http://flashdevelop.org">FlashDevelop</a>,
+<a href="http://code.google.com/p/as3crypto/">as3crypto</a>,
 and 
 <a href="http://almostflan.com">Frank</a>.
 </div>
