--- a/bin/index.html
+++ b/bin/index.html
@@ -75,7 +75,7 @@ url(taikonome-logo.png) top center no-repeat;}
 #twitter{margin: 7px 17px 0px 0px;}
 #fb-root{margin-top: 7px;}
 
-#content{padding: 10px 200px;}
+#content{margin: 0px auto; padding: 10px; max-width:600px;}
 
 #footer{margin-top: 100px; font-size: .7em;}
 #footer-logo img:hover{background: url(gnome-small.png) top center no-repeat;}
@@ -149,9 +149,10 @@ url(taikonome-logo.png) top center no-repeat;}
 	<p>Copy the <b>url</b> in your browser to <b>save</b> or <b>share</b> your creation.</p>
 	<br \/>
 	<p>=== Changelog ===</p>
-	<p>Version 0.4: Practicing away from your browser?  <b>Save</b> your beats to a wav or mp3 file.</p>
+	<p>Version 0.4: Practicing away from your browser?  <b>Save</b> your beats to a wav or mp3 file.<br/>
+	(Be patient, file creation may be a little slow.)</p>
 	<p>Version 0.3: Looking for <i>inspiration</i>?  Use our gnomish beat algorithms to <b>generate</b> a beat randomly or from a text string.</p>
-    <p>Version 0.2: Now with <i>hash tags!</i>  Your beats get <b>saved</b> into the url string.<br />
+    <p>Version 0.2: Now with <i>hash tags!</i>  Your beats get saved into the <b>url</b> address.<br />
 	You can use your browser's <b>back</b> button to <b>undo</b> your changes.</p>
   </div>
 
