update homepage, fix small popup window bug

--- a/bin/index.html
+++ b/bin/index.html
@@ -173,13 +173,14 @@ url(taikonome-logo.png) no-repeat top center;}
 	<p>Copy the <b>url</b> in your browser to <b>save</b> or <b>share</b> your creation.</p>
 	<br/>
 	<p>=== Changelog ===</p>
-	<p>Version 0.5: Be more <i>dynamic</i> with note <b>accents</b>.  <br/>
-	Tip: Use your mouse wheel to change the accents.<br/>
-	Advanced tip: Hold down <code>Shift</code> and click or drag your mouse to copy accent levels.</p>
+	<p>Version 0.6: For truly seamless loops in a fraction of the space, save to <b>ogg</b>.</p>
+	<!--<p><small>Ogg is a much better compressed format for seamless looping than <a href="http://www.compuphase.com/mp3/mp3loops.htm">mp3</a>-->
+	</small></p>
+	<p>Version 0.5: Be more <i>dynamic</i> with note <b>accents</b>.<br/>
+	<small>Tip: Use your mouse wheel to change the accents.<br/>
+	Advanced tip: Hold down <code>Shift</code> and click or drag your mouse to copy accent levels.</small></p>
 	<p>Version 0.4: Practice with your ipod.  <b>Save</b> your beats to a <b>wav</b> or <b>mp3</b> file.<br/>
-	<small>(Note that <a href="http://www.compuphase.com/mp3/mp3loops.htm">mp3 is bad for gapless playback</a>, and this <a href="https://github.com/kikko/Shine-MP3-Encoder-on-AS3-Alchemy">flash-based mp3 encoder</a> is not very high-quality.  
-	I *highly* recommend using wav over mp3 for seamless looping.</a> <br/>
-	Also, please be patient, file creation may be a little slow.)</small></p>
+	<small>(please be patient, file creation may be a little slow)</small></p>
 	<p>Version 0.3: Looking for <i>inspiration</i>?  Use our gnomish beat algorithms to <b>generate</b> a beat randomly or from a text string.</p>
     <p>Version 0.2: Now with <i>hash tags!</i>  Your beats get saved into the <b>url</b> address.<br />
 	You can use your browser's <b>back</b> button to <b>undo</b> your changes.</p>
